@@ -10,6 +10,7 @@ EXTRA_DIST = \
 	check-exif-executable.sh \
 	check-general-images.sh \
 	check-no-unknown-tags.sh \
+	check-all-mandatory-tags.sh \
 	check-994706.sh check-994706.b.patch \
 	check-1054321.sh 1054321.jpg \
 	check-1054322.sh 1054322.jpg \
@@ -26,7 +27,8 @@ check_SCRIPTS = \
 
 # This check script may take a little long - but it is invaluable. :)
 check_SCRIPTS += check-general-images.sh \
-	check-no-unknown-tags.sh
+	check-no-unknown-tags.sh \
+	check-all-mandatory-tags.sh
 
 TESTS = $(check_SCRIPTS)
 
