@@ -4,6 +4,8 @@ New in 0.7.x:
   * Made the tests work in non-English locales
   * Added check-no-unknown-tags.sh test to ensure that all EXIF tags are
     recognized
+  * Added check-all-mandatory-tags.sh test to ensure that no EXIF tags need
+    to be added because they are mandatory
 
 New in 0.7.13:
   * Working with libexif and exif ver. 0.6.17
